fix alignment of caret

--- a/react/Listbox.css
+++ b/react/Listbox.css
@@ -21,3 +21,7 @@
 .popover {
   box-shadow: 0px 1px 16px rgba(46, 46, 46, 0.12);
 }
+
+.button [data-reach-listbox-arrow] {
+  margin-left: auto;
+}
